@@ -34,7 +34,10 @@ using System.Net.NetworkInformation;
 using Gendarme.Framework;
 using Gendarme.Rules.Portability;
 using Mono.Cecil;
+
 using NUnit.Framework;
+using Test.Rules.Definitions;
+using Test.Rules.Fixtures;
 using Test.Rules.Helpers;
 
 namespace Test.Rules.Portability {
@@ -42,13 +45,18 @@ namespace Test.Rules.Portability {
 	class MyPing : Ping { } //MyPing..ctor calls Ping..ctor, this triggers the rule.
 	class MyProcess : Process { } //Using MyProcess.PriorityClass calls Process.PriorityClass. The property is not virtual.
 
-	[TestFixture]
-	public class FeatureRequiresRootPrivilegeOnUnixTest {
+	class ProcessLookAlike {
+		public ProcessPriorityClass PriorityClass { get; set; }
+	}
 
-		private FeatureRequiresRootPrivilegeOnUnixRule rule;
-		private TestRunner runner;
-		private AssemblyDefinition assembly;
-		private TypeDefinition type;
+	[TestFixture]
+	public class FeatureRequiresRootPrivilegeOnUnixTest : MethodRuleTestFixture<FeatureRequiresRootPrivilegeOnUnixRule> {
+
+		[Test]
+		public void DoesNotApply ()
+		{
+			AssertRuleDoesNotApply (SimpleMethods.ExternalMethod);
+		}
 
 		public void SetPriority ()
 		{
@@ -62,6 +70,33 @@ namespace Test.Rules.Portability {
 			p.PriorityClass = ProcessPriorityClass.Normal;
 		}
 
+		public void SetMyPriority ()
+		{
+			MyProcess p = new MyProcess ();
+			p.PriorityClass = ProcessPriorityClass.AboveNormal;
+		}
+
+		public void SetLookAlikePriority ()
+		{
+			ProcessLookAlike p = new ProcessLookAlike ();
+			p.PriorityClass = ProcessPriorityClass.AboveNormal;
+		}
+
+		[Test]
+		public void TestSetPriority ()
+		{
+			AssertRuleFailure<FeatureRequiresRootPrivilegeOnUnixTest> ("SetPriority", 1);
+			AssertRuleFailure<FeatureRequiresRootPrivilegeOnUnixTest> ("SetMyPriority", 1);
+			AssertRuleSuccess<FeatureRequiresRootPrivilegeOnUnixTest> ("SetPriorityNormal");
+			AssertRuleSuccess<FeatureRequiresRootPrivilegeOnUnixTest> ("SetLookAlikePriority");
+		}
+
+		public void SetPriorityUnknown (ProcessPriorityClass priority)
+		{
+			Process p = new Process ();
+			p.PriorityClass = priority;
+		}
+
 		public void SetPriorityNormalVariable ()
 		{
 			ProcessPriorityClass priority = ProcessPriorityClass.Normal;
@@ -69,20 +104,30 @@ namespace Test.Rules.Portability {
 			p.PriorityClass = priority;
 		}
 
-		public void SetMyPriority ()
+		public void SetPriorityAboveNormalVariable ()
 		{
-			MyProcess p = new MyProcess ();
-			p.PriorityClass = ProcessPriorityClass.AboveNormal;
+			ProcessPriorityClass priority = ProcessPriorityClass.AboveNormal;
+			Process p = new Process ();
+			p.PriorityClass = priority;
+		}
+
+		[Test]
+		public void TestSetPriorityVariable ()
+		{
+			AssertRuleSuccess<FeatureRequiresRootPrivilegeOnUnixTest> ("SetPriorityNormalVariable");
+			AssertRuleSuccess<FeatureRequiresRootPrivilegeOnUnixTest> ("SetPriorityUnknown");
+		}
+
+		[Test]
+		[Ignore ("we don't track variables value")]
+		public void TestSetPriorityAboveVariable ()
+		{
+			AssertRuleFailure<FeatureRequiresRootPrivilegeOnUnixTest> ("SetPriorityAboveNormalVariable", 1);
 		}
 
 		public void CreatePing ()
 		{
 			new Ping ();
-		}
-
-		public void CreateObject ()
-		{
-			new object ();
 		}
 
 		public void UsePing (Ping ping)
@@ -92,82 +137,22 @@ namespace Test.Rules.Portability {
 			ping.Send ("127.0.0.1");
 		}
 
-		[TestFixtureSetUp]
-		public void FixtureSetUp ()
-		{
-			string unit = Assembly.GetExecutingAssembly ().Location;
-			assembly = AssemblyFactory.GetAssembly (unit);
-			type = assembly.MainModule.Types ["Test.Rules.Portability.FeatureRequiresRootPrivilegeOnUnixTest"];
-			rule = new FeatureRequiresRootPrivilegeOnUnixRule ();
-			runner = new TestRunner (rule);
-		}
-
-		private MethodDefinition GetTest (string name)
-		{
-			foreach (MethodDefinition method in type.Methods) {
-				if (method.Name == name)
-					return method;
-			}
-			return null;
-		}
-
-		[Test]
-		public void TestSetPriority ()
-		{
-			MethodDefinition method = GetTest ("SetPriority");
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
-		}
-
-		[Test]
-		public void TestSetMyPriority ()
-		{
-			MethodDefinition method = GetTest ("SetMyPriority");
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
-		}
-
-		[Test]
-		public void TestSetPriorityNormal ()
-		{
-			MethodDefinition method = GetTest ("SetPriorityNormal"); //allowed value
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
-		}
-
-		[Test]
-		[Ignore ("we warn if the value is set from a variable")]
-		public void TestSetPriorityNormalVariable ()
-		{
-			MethodDefinition method = GetTest ("SetPriorityNormalVariable");
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
-		}
-
-		[Test]
-		public void TestMyPing ()
-		{
-			TypeDefinition type = assembly.MainModule.Types ["Test.Rules.Portability.MyPing"]; //this class extends Ping
-			MethodDefinition method = type.Constructors [0]; //the constructor calls the base constructor
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
-		}
-
 		[Test]
 		public void TestCreatePing ()
 		{
-			MethodDefinition method = GetTest ("CreatePing"); // calls new Ping ()
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
+			AssertRuleFailure<FeatureRequiresRootPrivilegeOnUnixTest> ("CreatePing", 1);
+			AssertRuleFailure<FeatureRequiresRootPrivilegeOnUnixTest> ("UsePing", 1);
+		}
+
+		public void CreateObject ()
+		{
+			new object ();
 		}
 
 		[Test]
-		public void TestCreateObject ()
+		public void TestCreate ()
 		{
-			MethodDefinition method = GetTest ("CreateObject"); //calls new object()
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
-		}
-
-		[Test]
-		public void TestUsePing ()
-		{
-			// use an already created Ping instance
-			MethodDefinition method = GetTest ("UsePing");
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
+			AssertRuleSuccess<FeatureRequiresRootPrivilegeOnUnixTest> ("CreateObject");
 		}
 	}
 }
